force-app/main/default/objects/ozbee__Production_Job_Checklist_Template_Item__c/ozbee__Production_Job_Checklist_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Production Job Checklist Template Item</label>
    <nameField>
        <displayFormat>PJCTI-{000000000}</displayFormat>
        <label>Production Job Checklist Template Items</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Job Checklist Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>