force-app/main/default/objects/ozbee__Production_Job_Checklist_Template_Item__c/fields/ozbee__Category_Type__c.field-meta.xml
<CustomField>
    <fullName>ozbee__Category_Type__c</fullName>
    <label>Category Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Site Safety</fullName>
            </value>
            <value>
                <fullName>Firewatch</fullName>
            </value>
            <value>
                <fullName>Scope of Work</fullName>
                <isActive>false</isActive>
                <label>Scope of Work</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>