force-app/main/default/objects/ozbee__Production_Job_Checklist_Template_Item__c/fields/ozbee__Production_Job_Checklist_Template__c.field-meta.xml
<CustomField>
    <fullName>ozbee__Production_Job_Checklist_Template__c</fullName>
    <label>Production Job Checklist Template</label>
    <referenceTo>ozbee__Production_Job_Checklist_Template__c</referenceTo>
    <relationshipLabel
  >Production Job Checklist Template Items</relationshipLabel>
    <relationshipName>Production_Job_Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>