force-app/main/default/objects/ozbee__Production_Job_Checklist_Template_Item__c/fields/ozbee__Safety_Inspection_Category__c.field-meta.xml
<CustomField>
    <fullName>ozbee__Safety_Inspection_Category__c</fullName>
    <label>Inspection Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName
    >ozbee__Safety_Inspection_Checklist_Categories</valueSetName>
    </valueSet>
</CustomField>