force-app/main/default/objects/ozbee__Production_Job_Checklist_Template_Item__c/fields/ozbee__Task_Name__c.field-meta.xml
<CustomField>
    <fullName>ozbee__Task_Name__c</fullName>
    <label>Task Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>